Implement overruling match results
* Add OverruleResultPolicy
* Add Match.OverruleResult controller action
* Update EnterResultViewModel
* Update notification email to reflect overruling
* Add ConfigureFacts to configure validator depending on default / overrule validation
* Add unit test for new validator methods

--- a/League/Styles/bootstrap/_custom_variables.scss
+++ b/League/Styles/bootstrap/_custom_variables.scss
@@ -26,7 +26,7 @@ $primary: #018DFF;
 $secondary: $gray-600;
 $success: #01DF02;
 $info: #015496;
-$warning: #FF8901;
+$warning: #FFA500; //#FFD700; //#FFA500; // #FF8901;
 $danger: #E401CD;
 $light: $gray-100;
 $dark: $gray-800;
