--- a/League.Demo/Views/Home/Privacy.de.cshtml
+++ b/League.Demo/Views/Home/Privacy.de.cshtml
@@ -3,7 +3,7 @@
     var Website = "\"volleyball-liga.de\"";
     var Company = "axuno gemeinnützige GmbH, Leni-Hirsch-Weg 12, 86156 Augsburg, Deutschland";
     var RequiredCookies = "<em>Erforderliche Cookies</em><br/>Diese Cookies sind für die grundlegenden Funktionen der Website erforderlich. Diese Cookies ermöglichen einen sicheren Login und die Speicherung des Fortschritts bei bestimmten Vorgängen.";
-    var EdgeDeleteCookies = "<li>Microsoft Edge: <a href='https://support.microsoft.com/de-de/help/4027947/microsoft-edge-delete-cookies' target='_blank' rel='nofollow noopener'>https://support.microsoft.com/de-de/help/4027947/microsoft-edge-delete-cookies</a></li>";
+    var EdgeDeleteCookies = "Microsoft Edge: <a href='https://support.microsoft.com/de-de/help/4027947/microsoft-edge-delete-cookies' target='_blank' rel='nofollow noopener'>https://support.microsoft.com/de-de/help/4027947/microsoft-edge-delete-cookies</a></li>";
     ViewData.Title("Datenschutzerklärung");
 }
 <h1>Datenschutzerklärung</h1>
