--- a/League/Views/Shared/Components/VenueSelector/Default.cshtml
+++ b/League/Views/Shared/Components/VenueSelector/Default.cshtml
@@ -14,7 +14,7 @@
     return;
 }
 <div class="table-responsive">@* Wrapping this way make tables responsive and 100% width *@
-    <table id="venue-list" class="table table-sm table-light mb-0">
+    <table id="venue-list" class="table table-sm table-light mb-0" aria-describedby="venue-list">
         <thead class="rounded">
         <tr>
             <th><i class="far fa-check-square"></i></th>
