--- a/League/Views/TeamApplication/List.cshtml
+++ b/League/Views/TeamApplication/List.cshtml
@@ -6,13 +6,14 @@
 @{
     ViewData["Title"] = Localizer["Team Registrations"].Value + " - " + Model.Tournament?.Name;
     var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
+    const string tableDescriptionId = "table-description-id"; // for aria-describedby of a table element
     string ZonedTimeString(long teamId)
     {
         return Model.TimeZoneConverter.ToZonedTime(Model.TeamRegisteredOn[teamId])!.DateTimeOffset.DateTime.ToShortDateString();
     }
 }
     <div class="mb-0 pb-1">
-        <h2 class="h2">@ViewData["Title"]</h2>
+        <h2 id="@tableDescriptionId" class="h2">@ViewData["Title"]</h2>
         <hr class="mb-" />
         <partial name="@nameof(League.Views.ViewNames.TeamApplication._TeamApplicationMessagesPartial)" />
         @if (TenantContext.TournamentContext.ApplicationAllowed)
@@ -34,7 +35,7 @@
 
         <div class="table-responsive mb-2">
             @* Wrapping this way make tables responsive and 100% width *@
-            <table id="team-list" class="table table-sm table-light mb-0">
+            <table id="team-list" class="table table-sm table-light mb-0" aria-describedby="@tableDescriptionId">
                 <thead class="rounded">
                     <tr>
                         <th>@Localizer["Team"]</th>
@@ -43,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var round in Model.TournamentRoundTeams.OrderBy(r => r.RoundName).ToList().Select(r => (Id: r.RoundId, RoundDescription: r.RoundDescription, RoundTypeDescription: r.RoundTypeDescription)).Distinct())
+                    @foreach (var round in Model.TournamentRoundTeams.OrderBy(r => r.RoundName).Select(r => (Id: r.RoundId, RoundDescription: r.RoundDescription, RoundTypeDescription: r.RoundTypeDescription)).Distinct())
                     {
                         <tr><td colspan="3"><h4 class="d-inline-block"><span class="badge bg-dark">@round.RoundDescription</span></h4><span class="text-muted small ms-3">@round.RoundTypeDescription</span></td></tr>
                         foreach (var rt in Model.TournamentRoundTeams.Where(r => r.RoundId == round.Id).OrderBy(r => r.TeamName))
