--- a/League/Views/Shared/Components/MainNavigation/Default.cshtml
+++ b/League/Views/Shared/Components/MainNavigation/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model League.Components.MainNavigationComponentModel
 @using League.Components
 
-<ul class="navbar-nav me-auto mt-2 mt-md-0 w-100" role="menubar">
+<ul class="navbar-nav me-auto mt-2 mt-md-0 w-100" role="menubar" data-bs-theme="light">
     @foreach (var node in Model.TopNavigationNodes)
     {
         // Node keys after "RightAlignSeparator" shall be aligned to the right margin of the navigation bar
