--- a/League.Demo/Views/Shared/_Layout.cshtml
+++ b/League.Demo/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded ps-2 site-sticky-top">
+    <nav id="nav-main" class="navbar navbar-expand-md rounded ps-2 site-sticky-top" data-bs-theme="dark">
         @* bootstrap class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
         <div class="container-fluid ps-0">
             @* <a class="navbar-brand" href="#">axuno</a>*@
